syntax = "proto3";
option java_package = "ua.blackwind.limbus_helper";
option java_multiple_files = false;

message PartySettings{
    bool showOnlyActive = 1;
}